# anki-code-highlight

./: .gitattributes  .gitignore  .ignore  .pre-commit-config.yaml  .style.yapf  .tokeignore  .yapfignore  LICENSE.txt  README.md  __init__.py  anki-code-highlight.sublime-project  config.json  main.py  manifest.json  pyproject.toml  pyrightconfig.json
highlightjs/: .gitattributes  highlight.js  highlight.min.js
highlightjs/es/: core.js  core.min.js  highlight.js  highlight.min.js
highlightjs/languages/: 1c.min.js  abnf.min.js  accesslog.min.js  actionscript.min.js  ada.min.js  angelscript.min.js  apache.min.js  applescript.min.js  arcade.min.js  arduino.min.js  armasm.min.js  asciidoc.min.js  aspectj.min.js  autohotkey.min.js  autoit.min.js  avrasm.min.js  awk.min.js  axapta.min.js  bash.min.js  basic.min.js  bnf.min.js  brainfuck.min.js  c.min.js  cal.min.js  capnproto.min.js  ceylon.min.js  clean.min.js  clojure-repl.min.js  clojure.min.js  cmake.min.js  coffeescript.min.js  coq.min.js  cos.min.js  cpp.min.js  crmsh.min.js  crystal.min.js  csharp.min.js  csp.min.js  css.min.js  d.min.js  (+152 more)
highlightjs/styles/: a11y-dark.css  a11y-dark.min.css  a11y-light.css  a11y-light.min.css  agate.css  agate.min.css  an-old-hope.css  an-old-hope.min.css  androidstudio.css  arduino-light.css  arta.css  ascetic.css  atom-one-dark-reasonable.css  atom-one-dark.css  atom-one-light.css  brown-paper.css  codepen-embed.css  color-brewer.css  dark.css  default.css  default.min.css  devibeans.css  devibeans.min.css  docco.css  far.css  felipec.css  felipec.min.css  foundation.css  gml.css  (+59 more)
(+544 files in other folders)
